--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -98,568 +98,13 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "## Review of Quiz from yesterday"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## Variables and Types\n",
+    "## Review of the quiz from yesterday\n",
     "\n",
-    "__1. Which of the following is of the type `float`?:__  \n",
-    "7.4  \n",
-    "\n",
-    "__2. Match the following variables with their type:__  \n",
-    "\n",
-    "`var1 = 54`               &emsp; &emsp; &emsp; &emsp; &ensp;  &ensp;   __integer__  \n",
-    "`var2 = [1,2,7,1,24]`     &nbsp;    &nbsp;                             __list__  \n",
-    "`var3 = 2.98`             &emsp; &emsp; &emsp;  &nbsp;  &nbsp; &nbsp;  __float__  \n",
-    "`var4 = True`             &emsp; &emsp; &emsp;  &nbsp;  &nbsp; &nbsp;  __boolean__  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Literals\n",
-    "\n",
-    "All literals have a type:\n",
-    "\n",
-    "- Strings (str) &emsp; &emsp; &nbsp;      ‘Hello’ “Hi”\n",
-    "- Integers (int)\t&emsp; &emsp;             5\n",
-    "- Floats (float)\t&emsp; &emsp;             3.14\n",
-    "- Boolean (bool) &emsp; &nbsp;  True or False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bool"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Variables\n",
-    "\n",
-    "Used to store values and to assign them a name."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.14"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = 3.14\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "### Lists\n",
-    "\n",
-    "A collection of values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = [1,5,3,7,8]\n",
-    "y = ['a','b','c']\n",
-    "type(y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Comments\n",
-    "\n",
-    "__3. Which of the following symbols can be used to write comments in your code?__\n",
-    "\n",
-    "\\#"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Operations\n",
-    "\n",
-    "\n",
-    "__4. What happens if you do `[1,2,5,11] + [87,2,43,3]`?__  \n",
-    "`[1,2,5,11,87,2,43,3]`  &emsp; &emsp; The lists will be concatenated\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "__5. How do you find out if the variable `x` is present in a  the list `mylist`?__  \n",
-    "Two answers correct:  \n",
-    "1. `x in mylist`\n",
-    "2.   \n",
-    "```\n",
-    "for l in mylist:\n",
-    "        if l == x:\n",
-    "            print('Found a match')\n",
-    "```  \n",
-    "\n",
-    "__6. How do you find out if 5 is larger than 3 and the integer 4 is the same as the float 4? Fill in all the missing code.__  \n",
-    "`5 > 3 and 4 == 4.0`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Basic operations\n",
-    "\n",
-    "__Type &emsp; &emsp; &emsp; &emsp;  Operations__\n",
-    "\n",
-    "int &emsp; &emsp; &emsp; &emsp; &emsp;        +  -  *  /  **  %  // ...  \n",
-    "float &emsp; &emsp; &emsp; &emsp; &nbsp;      +  -  *  /  **  %  // ...  \n",
-    "string &emsp; &emsp; &emsp; &ensp; &nbsp;           + *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 6, 7, 8, 5, 6, 7, 8, 5, 6, 7, 8]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = 2\n",
-    "b = 5.46\n",
-    "c = [1,2,3,4]\n",
-    "d = [5,6,7,8]\n",
-    "e = 7\n",
-    "\n",
-    "d * 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    " ### Comparison/Logical/Membership operators\n",
-    " \n",
-    " <img src=\"img/operators_summary.png\" alt=\"Drawing\" style=\"width: 800px;\"/> "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [1,2,3,4,5,6,7,8]\n",
-    "b = 5\n",
-    "c = 10\n",
-    "b in a\n",
-    "b < c or c == 1\n",
-    "b not in a "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Sequences\n",
-    "\n",
-    "__7. How do you select the second element in the variable `mylist = [4,3,8,10]`?__  \n",
-    "`mylist[1]`  \n",
-    "<br>\n",
-    "__8. Pair the following variables with whether they are mutable or immutable__  \n",
-    "\n",
-    "`var1 = 'my pretty string'`    &emsp; &emsp; &emsp;                     __immutable__  \n",
-    "`var2 = [1,2,3,4,5]`           &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; __mutable__  \n",
-    "`var3 = \"hello world\"`         &emsp; &emsp; &emsp; &emsp; &ensp; &nbsp;        __immutable__  \n",
-    "`var4 = ['a', 'b', 'c', 'd']`  &emsp; &emsp;       __mutable__  \n",
-    "<br>\n",
-    "__9. Which of the following types are iterable?__  \n",
-    "Lists and strings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Indexing\n",
-    "\n",
-    "Lists (and strings) are an ORDERED collection of elements where every element can be access through an index.\n",
-    "\n",
-    "`a[0]`  : first item in list a\n",
-    "\n",
-    "REMEMBER! Indexing starts at 0 in python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [1,2,3,4,5]\n",
-    "b = ['a','b','c']\n",
-    "c = 'a random string'\n",
-    "\n",
-    "c[2]\n",
-    "a[:2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Mutable / Immutable sequences and iterables\n",
-    "\n",
-    "Lists are mutable object, meaning you can use an index to change the list, while strings are immutable and therefore not changeable.\n",
-    "\n",
-    "An iterable sequence is anything you can loop over, ie, lists and strings."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[42, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [1,2,3,4,5]         # mutable\n",
-    "b = ['a','b','c']       # mutable\n",
-    "c = 'a random string'   # immutable\n",
-    "\n",
-    "#c[0] = 'A'\n",
-    "a[0] = 42\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## New data type: `tuples`\n",
-    "\n",
-    "- A tuple is an immutable sequence of objects\n",
-    "- Unlike a list, nothing can be changed in a tuple\n",
-    "- Still iterable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3, 4, 'a', 'b', 'c', [42, 43, 44])\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "a\n",
-      "b\n",
-      "c\n",
-      "[42, 43, 44]\n"
-     ]
-    }
-   ],
-   "source": [
-    "myTuple = (1,2,3,4,'a','b','c',[42,43,44])\n",
-    "#myTuple[0] = 42\n",
-    "print(myTuple)\n",
-    "#print(len(myTuple))\n",
-    "for i in myTuple:\n",
-    "     print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## If/ Else statements\n",
-    "\n",
-    "__10. How do you do to print ‘Yes’ if x is bigger than y?__  \n",
-    "`if x > y:`  \n",
-    "&emsp;`print('Yes')`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7 is not in the list\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 7\n",
-    "b = [1,2,3,4]\n",
-    "if a in b:\n",
-    "    print(str(a)+' is found in the list b')\n",
-    "else:\n",
-    "    print(str(a)+' is not in the list')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Files and loops\n",
-    "\n",
-    "__How do you open a file handle to read a file called ‘somerandomfile.txt’?__  \n",
-    "`fh = open('somerandomfile.txt')`\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "__The file in the previous question contains several lines, how do you print each line?__  \n",
-    "1. `for line in fh:`  \n",
-    "&emsp;`print(line)`\n",
-    "\n",
-    "2. `for row in fh:`  \n",
-    "&emsp;`print(row)`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "just a strange\n",
-      "file with\n",
-      "some\n",
-      "nonsense lines\n"
-     ]
-    }
-   ],
-   "source": [
-    "fh = open('../files/somerandomfile.txt','r', encoding = 'utf-8')\n",
-    "for line in fh:\n",
-    "    print(line.strip())\n",
-    "fh.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n"
-     ]
-    }
-   ],
-   "source": [
-    "numbers = [5,6,7,8]\n",
-    "i = 0\n",
-    "while i < len(numbers):\n",
-    "    print(numbers[i])\n",
-    "    i += 1\n"
+    "- <a href=\"https://forms.office.com/Pages/DesignPageV2.aspx?origin=NeoPortalPage&subpage=design&id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__Yehr4dUMTZSRVUyRVMxMTQzODBTUk1IVVZOVk83Ti4u&analysis=true\">Link to the quiz statistics</a>"
    ]
   },
   {
@@ -690,18 +135,8 @@
     "    - Variants identification with VCF (Exercise after lunch)\n",
     "- __Session 3__:\n",
     "    - Introduction to the Course Project\n",
+    "- __Session 4__:\n",
     "    - Team building - Spaghetti tower"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "There will be exercises or possibly quiz after each session"
    ]
   },
   {
@@ -776,6 +211,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "#### Now we will save the code in a text file and try to run it in the terminal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "skip"
     }
    },
@@ -797,18 +243,18 @@
    "source": [
     "## 5 mins exercise\n",
     "Put some of your Python code you have written yesterday and save it in a Python script, run it in a terminal with either \n",
-    "\n",
+    "___\n",
     "```bash\n",
-    "python yourscript.py\n",
+    "    python yourscript.py\n",
     "```\n",
     "\n",
     "or\n",
     "```bash\n",
-    "./yourscript.py\n",
+    "    ./yourscript.py\n",
     "```\n",
-    "\n",
+    "___\n",
     "- Replace `yourscript.py` with the actual name you use\n",
-    "- You need to add `#!/usr/bin/env python` at the beginning of the script and also make the script executable in order to run by the second method "
+    "- You need to add `#!/usr/bin/env python` at the beginning of the script and also make the script executable in order to run it with the second method "
    ]
   },
   {
@@ -1196,8 +642,21 @@
    },
    "source": [
     "### Day 2,  Exercise 1\n",
+    "Link: https://python-bioinfo.bioshu.se/exercises.html\n",
+    "___\n",
     "\n",
-    "- Taka a break after the exercise"
+    "#### Take a break after the exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: In bioinformatics, the process of identifying differences (variants) between a particular DNA sequence and a reference sequence, is known as \"variant calling.\""
    ]
   },
   {
@@ -1220,9 +679,8 @@
     }
    },
    "source": [
-    "## How to approach a coding task\n",
+    "## Description of the task\n",
     "\n",
-    "### Task:  \n",
     "You have a VCF file with a number of samples. You are interested in only one of the samples (sample1) and one region (chr5, 1,200,000-1,300,000). What you want to know is whether this sample has any variants in this region, and if so, which variants.\n"
    ]
   },
@@ -1297,6 +755,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1347,6 +806,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1389,6 +849,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1440,8 +901,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1664,9 +1126,31 @@
     }
    },
    "source": [
-    "## Break \n",
-    "\n",
-    "## Quiz"
+    "## Take a break \n",
+    "___\n",
+    "## Quiz for Day 2\n",
+    "- Link: https://python-bioinfo.bioshu.se/quiz.html\n",
+    "___\n",
+    "## Lunch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Afternoon session\n",
+    "___\n",
+    "### 1. Exercise 2 of Day 2\n",
+    "__\n",
+    "### 2. Introduction to the course project\n",
+    "___\n",
+    "##### Break\n",
+    "___\n",
+    "### 3. Team building"
    ]
   },
   {
@@ -1679,7 +1163,7 @@
    "source": [
     "## Day 2, Exercise 2\n",
     "\n",
-    "https://python-bioinfo.bioshu.se/exercises/day2/Day_2_Exercise_2.html"
+    "- Link: https://python-bioinfo.bioshu.se/exercises.html"
    ]
   },
   {
@@ -1739,7 +1223,7 @@
     "- Ion channel protein, acting in epithelial cells\n",
     "- CFTR gene located on chromosome 7 of the human genome\n",
     "- Over 1,500 mutations known to cause CF\n",
-    "- Non-synonymous (amino acid changing) mutationsàpremature stop codons\n",
+    "- Non-synonymous (amino acid changing) mutations premature stop codons\n",
     "\n",
     "Include an image of the protein"
    ]
@@ -1755,9 +1239,9 @@
     "## Goal of the project\n",
     "\n",
     "#### Write a python program that:\n",
-    "- Extracts the correct CFTR transcript from the human genome\n",
-    "- Translates it into its corresponding amino acid sequence\n",
-    "- Determines if one or more patients have a premature stop codon\n",
+    "- Extract the correct CFTR transcript from the human genome\n",
+    "- Translate it into its corresponding amino acid sequence\n",
+    "- Determine if one or more patients have a premature stop codon\n",
     "\n",
     "\n",
     "__You will be guided step by step towards the final goal__"
@@ -1775,7 +1259,7 @@
     "\n",
     "- Human reference genome\n",
     "    - Chromosome 7 in fasta format\n",
-    "    - Gene annotations in GTF format\n",
+    "    - Gene annotations in GTF (Gene Transfer Format) format\n",
     "- Genome sequencing data from five patients \n",
     "    - Chromosome 7 in fasta format"
    ]
@@ -1850,7 +1334,7 @@
     }
    },
    "source": [
-    "#### Attributes\n",
+    "## Attributes\n",
     "\n",
     "Some attributes (always semi-colon separated key-value pairs): \n",
     "- gene_id: The stable identifier for the gene\n",
