--- a/lectures/Day_3.ipynb
+++ b/lectures/Day_3.ipynb
@@ -60,216 +60,8 @@
     }
    },
    "source": [
-    "## Review of quiz from yesterday"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Tuples\n",
-    "\n",
-    "__1. Which of the following variables are of the type tuple?__  \n",
-    "`a = (1, 2, 3, 4)`  \n",
-    "`a = ([1, 2], 'a', 'b')`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "__2. What is the difference between a tuple and a list?__  \n",
-    "A tuple is immutable while a list is mutable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 4]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myTuple    = (1, 2, 3, 'a', 'b', [4,5,6])\n",
-    "myList     = [1, 2 ,3]\n",
-    "myList[2]  = 4\n",
-    "#myTuple[2] = 4\n",
-    "myList"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## How to structure code\n",
-    "\n",
-    "__3. What does pseudocode mean?__  \n",
-    "Writing down the steps you intend to include in your code in more general language"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- Decide on what output you want\n",
-    "- What input files do you have?\n",
-    "- How is the input structured, can you iterate over it?\n",
-    "- Where is the information you need located?\n",
-    "- Do you need to save a lot of information while iterating?\n",
-    "  - Lists are good for ordered data\n",
-    "  - Sets are good for non-duplicate single entry information\n",
-    "  - Dictionaries are good for a lot of structured information\n",
-    "- When you have collected the data needed, decide on how to process it\n",
-    "- Are you writing your results to a file?\n",
-    "\n",
-    "__Always start with writing pseudocode!__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Functions and methods\n",
-    "\n",
-    "__4. What are the following examples of?__  \n",
-    "`len([1, 2, 3, 4])`  \n",
-    "`print(\"my text\")`\n",
-    "\n",
-    "Functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "__5. What are the following examples of?__  \n",
-    "`\"my\\ttext\".split(\"\\t\")`  \n",
-    "`[1, 2, 3].pop()`\n",
-    "\n",
-    "Methods"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "General syntax of Functions and Methods\n",
-    "\n",
-    "`functionName()`  &emsp; &emsp;  `<object>.methodName()`\n",
-    "\n",
-    "<br>\n",
-    "A method always belongs to an object of a specific class, a function does not have to."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "__6. Calculate the average of the list `[1,2,3.5,5,6.2]` to one decimal, using Python__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myList = [1, 2, 3.5, 5 ,6.2]\n",
-    "round(sum(myList)/len(myList),1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "__7. Take the list `['I','know','Python']` as input and output the string 'I KNOW PYTHON'__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I KNOW PYTHON\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_list   = ['I','know','Python']\n",
-    "my_string =' '.join(my_list).upper()\n",
-    "print(my_string)"
+    "## Review of the quiz from yesterday\n",
+    "<a href=\"https://forms.office.com/Pages/DesignPageV2.aspx?origin=NeoPortalPage&subpage=design&id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__Yehr4dURVQ1UU9YSjMzUkdUVEtWMEg4V0VaQ1pXMy4u&analysis=true\">Link to the quiz statistics</a>"
    ]
   },
   {
@@ -1116,6 +908,7 @@
    "cell_type": "code",
    "execution_count": 98,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1141,7 +934,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1162,7 +957,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1183,7 +980,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1204,7 +1003,9 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1225,7 +1026,9 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "AttributeError",
@@ -1581,7 +1384,9 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mydict = {\n",
@@ -1636,7 +1441,9 @@
    },
    "source": [
     "## Day 3, Exercise 1\n",
-    "- Take a break after the exercise"
+    "- Link: https://python-bioinfo.bioshu.se/exercises.html\n",
+    "___\n",
+    "### Take a break after the exercise"
    ]
   },
   {
@@ -1747,7 +1554,7 @@
     }
    ],
    "source": [
-    "# Use nested conditionals to categorize genetic variants based on multiple attributes.\n",
+    "# Let's start with the previous code\n",
     "genotype = \"AG\"\n",
     "phenotype = \"expressed\"\n",
     "if genotype == \"AG\":\n",
@@ -2172,9 +1979,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
-    "Note: Can you answer, why we use argumetns from the command line"
+    "Note: Can you answer, why we use arguments from the command line"
    ]
   },
   {
@@ -2454,13 +2265,30 @@
    },
    "source": [
     "## Day 3, Exercise 2\n",
-    "- take a short break after the exercise\n",
-    "- Quiz for Day 3\n",
+    "- Link: https://python-bioinfo.bioshu.se/exercises.html\n",
+    "___\n",
+    "##### Break\n",
+    "___\n",
     "\n",
-    "## Lunch \n",
+    "### Quiz for Day 3\n",
+    "- Link: https://python-bioinfo.bioshu.se/quiz.html\n",
+    "___\n",
     "\n",
+    "### Lunch \n",
+    "___\n",
     "## Project time after lunch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
