--- a/lectures/Day_4.ipynb
+++ b/lectures/Day_4.ipynb
@@ -37,7 +37,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Review of Day 3\n",
     "- Functions and methods\n",
@@ -51,702 +55,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Review of quiz from yesterday"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### In what ways does the type of an object matter?\n",
-    "-  Questions 1, 2 and 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row = 'sofa|2000|buy|Uppsala'\n",
-    "fields = row.split('|')\n",
-    "price = fields[1]\n",
-    "if price == 2000:\n",
-    "    print('The price is a number!')\n",
-    "if price == '2000':\n",
-    "    print('The price is a string!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(sorted([ 2000,   30,   100 ]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(sorted(['2000', '30', '100']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### In what ways does the type of an object matter?\n",
-    "\n",
-    "- Each type store a specific type of information\n",
-    "    - `int` for integers,\n",
-    "    - `float` for floating point values (decimals),\n",
-    "    - `str` for strings,\n",
-    "    - `list` for lists,\n",
-    "    - `dict` for dictionaries.\n",
-    "\n",
-    "- Each type supports different operations, functions and methods."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "lines_to_next_cell": 0,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- Each type supports different **operations**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "30 > 2000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "'30' > '2000'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "30 > int('2000')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'12345'[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "12345[2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "lines_to_next_cell": 0,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- Each type supports different **functions**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "max('2000')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "max(2000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "math.cos(3.14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "math.cos('3.14')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "lines_to_next_cell": 0,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- Each type supports different **methods**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "'ACTG'.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[1, 2, 3].lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set([]).add('tiger')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[].add('tiger')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- How to find what methods are available: Python documentation, or `dir()`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir('ACTG') # list all attributes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dir(str) # list all attributes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Convert string to number\n",
-    "- Questions 4, 5 and 6\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "float('2000')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "float('0.5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "float('1e9')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "float('1e-2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int('2000')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int('1.5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "int('1e9')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Convert to boolean: `1`, `0`, `'1'`, `'0'`, `''`, `{}`\n",
-    "- Question 7\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "bool(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "bool(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "bool('1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "bool('0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "bool('')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bool({})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- Python and the truth: true and false values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "values = [1, 0, '', '0', '1', [], [0]]\n",
-    "for x in values:\n",
-    "    if x:\n",
-    "        print(repr(x), 'is true!')\n",
-    "    else:\n",
-    "        print(repr(x), 'is false!')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- `if x` is equivalent to `if bool(x)`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "- Is `1` equivalent to `True`?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "1 == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "x = 1\n",
-    "if x is True:\n",
-    "    print(repr(x), 'is true!')\n",
-    "else:\n",
-    "    print(repr(x), 'is false!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "x = 1\n",
-    "if bool(x) is True:\n",
-    "    print(repr(x), 'is true!')\n",
-    "else:\n",
-    "    print(repr(x), 'is false!')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- Be careful: `if x is True` is **not** equivalent to `if bool(x) is True`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Container types, when should you use which? (Question 8)\n",
-    "\n",
-    "- **lists**: when order is important\n",
-    "- **dictionaries**: to keep track of the relation between keys and values\n",
-    "- **sets**: to check for membership. No order, no duplicates."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "genre_list = [\"comedy\", \"drama\", \"drama\", \"sci-fi\"]\n",
-    "genre_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "genres = set(genre_list)\n",
-    "genres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'drama' in genre_list\n",
-    "'drama' in genres\n",
-    "# which operation is faster?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "genre_counts = {\"comedy\": 1, \"drama\": 2, \"sci-fi\": 1}\n",
-    "genre_counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movie = {\"rating\": 10.0, \"title\": \"Toy Story\"}\n",
-    "movie"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Python syntax (Question 9)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def echo(message): # starts a new function definition\n",
-    "    # this function echos the message \n",
-    "    print(message) # print state of the variable\n",
-    "    return message # return the value to end the function\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Converting between strings and lists\n",
-    "- Question 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str(['h', 'e', 'l', 'l', 'o'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'_'.join(['h', 'e', 'l', 'l', 'o'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### What is a function?\n",
-    "- A named piece of code that performs a specific task\n",
-    "- A relation (mapping) between inputs (arguments) and output (return value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def increment_by_two(number):\n",
-    "    number += 2\n",
-    "    return number\n",
-    "\n",
-    "print(increment_by_two(100))"
+    "## Review of the quiz from Day 3\n",
+    "- <a href=\"https://forms.office.com/Pages/DesignPageV2.aspx?origin=NeoPortalPage&subpage=design&id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__Yehr4dUQkIwRUdDVjBGOElETlNPMERKRTUzNlpMTS4u&analysis=true\">Link to the quiz statistics</a>"
    ]
   },
   {
@@ -760,14 +76,15 @@
    "source": [
     "### Day 4\n",
     "\n",
-    "- More on functions:\n",
+    "- __Session 1__\n",
     "    - Scop of variables\n",
     "    - Positional arguments and keyword arguments\n",
     "    - `return` statement\n",
-    "- Reusing code:\n",
+    "- __Session 2__\n",
     "    - Comments and documentation\n",
     "    - Importing modules: using libraries\n",
-    "    - Brief introduction to Biopython\n"
+    "    - Brief introduction to Biopython\n",
+    "#### Project time after lunch"
    ]
   },
   {
@@ -1439,16 +756,20 @@
    },
    "source": [
     "### Day 4, Exercise 1\n",
-    "\n",
+    "- Link: https://python-bioinfo.bioshu.se/exercises.html\n",
     "- Extra reading:\n",
-    "    - https://realpython.com/python-kwargs-and-args/\n",
     "    - https://able.bio/rhett/python-functions-and-best-practices--78aclaa\n",
-    "### Break"
+    "___\n",
+    "#### Take a break after the exercise"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Session 2: Moudles and Documentaiton"
    ]
@@ -2124,7 +1445,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -2452,18 +1773,33 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "## Day 2, Exercise 2\n",
-    "\n",
-    "## Break\n",
-    "\n",
-    "## Quiz\n",
-    "\n",
-    "## Project time after lunch"
+    "### Day 2, Exercise 2\n",
+    "- Link: https://python-bioinfo.bioshu.se/exercises.html\n",
+    "___\n",
+    "##### Break\n",
+    "___\n",
+    "### Quiz of Day 2\n",
+    "- Link: https://python-bioinfo.bioshu.se/quiz.html\n",
+    "___\n",
+    "#### Lunch\n",
+    "___\n",
+    "### Project time after lunch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
