--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -39,14 +39,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Review of Day 4"
+    "### Review of Day 4\n",
+    "\n",
+    "- Scop of variables\n",
+    "    - Variables defined inside the function are local varaibles\n",
+    "    - Be cautious to use global variables\n",
+    "- Positional arguments and keyword arguments\n",
+    "    - Use keyword arguments to improve the explicity when calling a function\n",
+    "- `return` statement\n",
+    "    - Return meaningful result for a function to make it more reusable\n",
+    "- Comments and documentation\n",
+    "    - How to create your own module with both module level documentation and help message for functions\n",
+    "    - Although code should explain by itself, comment the code when it's hard to understand.\n",
+    "- Importing modules: using libraries\n",
+    "    - import os\n",
+    "    - from math import pi\n",
+    "- Brief introduction to Biopython using `SeqIO`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Review of Quiz of Day 4"
+    "### Review of the quiz from Day 4\n",
+    "- <a href=\"https://forms.office.com/Pages/DesignPageV2.aspx?origin=NeoPortalPage&subpage=design&id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__Yehr4dUQkVYOVlONlNIVEVZRTEyUTAwT0s0SzgzTy4u&analysis=true\">Link to the quiz statistics</a>"
    ]
   },
   {
@@ -2830,22 +2846,10 @@
     }
    },
    "source": [
-    "## Take a break\n",
-    "## Day 5, Exercise 1 (~30 minutes)\n",
-    "https://python-bioinfo.bioshu.se/exercises/day5/Day_1_Exercise_1.html\n",
-    "\n",
-    "- **Easy**:\n",
-    "    - Explore the `Orange_1.tsv`\n",
-    "\n",
-    "- **Medium/hard**:\n",
-    "    - Use Pandas to read VCF file\n",
-    "    - Explore it by making graphs\n",
-    "    \n",
-    "- **Extra exercises**:\n",
-    "    - Read the pandas documentation :)\n",
-    "    - Start exploring your own data\n",
-    "\n",
-    "\n"
+    "### Take a break\n",
+    "___\n",
+    "## Day 5, Exercise 1\n",
+    "- Link: https://python-bioinfo.bioshu.se/exercises.html"
    ]
   },
   {
@@ -2860,26 +2864,157 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mini exercise (15 min)\n",
+    "AI is getting increasingly popular with the break through of LLM (large language modules), the most prominent is ChatGPT. China also have the similar AI chatbot WenxinYiyan. \n",
     "\n",
-    "## 5 min break before the last lecture"
+    "Just like search engine like Google terminated the labrouse library searching and dictionary searching technique, AGI, represented by ChatGPT will also revolutionarize the way we work, learn and educate. \n",
+    "\n",
+    "\n",
+    "The tool is there, so we should not ingore it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## AI can program can understand natural language\n",
+    "\n",
+    "Task:\n",
+    "\n",
+    "I have a sequence file in fasta format, write a Python script that can take the sequence as an argument from the command line and print the resutl in the following format\n",
+    "\n",
+    "seqid seqlength"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## So why do we learn Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## The instructin should be clear and direct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## For complitcated tasks, divide the tasks in smaller subtasks and guide AI to reach the final goal\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Drawback of using AI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using AI as your learning parterner \n",
+    "\n",
+    "For the code you don't understand, ask AI to analyze it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## copilot demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Mini exercise (15 min)\n",
+    "___\n",
+    "### Take a short break before our last lecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Conclusion remarks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "We have learned the fundermental concepts of Python and now you should be able to \n",
+    "\n",
+    "- Know how to write a Python script to acheive basic bioinformatics tasks \n",
+    "- Know how to use the external Python modules and packages to facilitate your coding task\n",
+    "- Know basic of data analysis and plotting with the Pandas module\n",
+    "- Know how to further develop your Python skills with numeras online tutorials and documentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "With the emering of AI, effort to memorize usage of numeras moduels and methods is meaningless, unless efficiency is the main target of your programming. \n",
+    "\n",
+    "Instead, the ability to raise the question, suggest steps to solve the question is more important \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show the curve \n",
+    "\n",
+    "and mark the reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The learning curve is high, but the forgetting curse is also sharp. I hope in the next few months, you can keep practicing the knowlegement you have learned and use AI as your learning parter to overcome the the quick decling of knowlegement you have leared these days"
    ]
   },
   {
